--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
                 <section class="jonathan-name">
                     <span><img src="https://res.cloudinary.com/dwdz4mn27/image/upload/v1626999745/images2/image-jonathan_ngei2v.jpg" alt=""></span>
-                    <h1>Jonathan Walters <br>
+                    <h1 class="jonathan-name-container">Jonathan Walters <br>
                      <span>Verified Graduate</span></h1>
                     
                 </section>
 
                 <section class="jonathan-rev-container">
-                    <h1>The team was very supportive and kept me motivated</h1>
-                    <p>"I stared as a total newbie wwith virtually no coding skills. I now work as a mobile engineer for a big company.This was one of the best investments I've made in myself"</p>
+                    <h1 class="jonathan-rev">The team was very supportive and kept me motivated</h1>
+                    <p class="jonathan-rev2">"I stared as a total newbie wwith virtually no coding skills. I now work as a mobile engineer for a big company.This was one of the best investments I've made in myself."</p>
                 </section>
 
             </section>
@@ -52,13 +52,13 @@
 
                 <section class="kira-name">
                     <span><img src="https://res.cloudinary.com/dwdz4mn27/image/upload/v1626999745/images2/image-kira_m6tdnv.jpg" alt=""></span>
-                    <h1>Kira Whittle <br>
+                    <h1 class="kira-name-container">Kira Whittle <br>
                     <span>Verified Graduate</span></h1>
                 </section>
 
                 <section class="kira-rev-container">
-                    <h1>Such a life-changing experience. Highly recimmended!</h1>
-                    <p>"Before joining the bootcamp, I've never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a  former student of theirs who can only say wounderful things about the program. The entire curriculum and staff did not disappoint. They were hands-on and I never had to wait long for assisance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I've oftenn referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer afeter receiving multiple offers. 100% recommend!"</p>
+                    <h1 class="kira-rev">Such a life-changing experience. Highly recimmended!</h1>
+                    <p class="kira-rev2">"Before joining the bootcamp, I've never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a  former student of theirs who can only say wounderful things about the program. The entire curriculum and staff did not disappoint. They were hands-on and I never had to wait long for assisance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I've oftenn referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer afeter receiving multiple offers. 100% recommend!"</p>
                 </section>
 
             </section>
@@ -67,14 +67,14 @@
 
                 <section class="jeanette-name">
                     <span><img src="https://res.cloudinary.com/dwdz4mn27/image/upload/v1626999745/images2/image-jeanette_poxqe9.jpg" alt=""></span>
-                    <h1>Jeanette Harmon <br>
+                    <h1 class="jeanette-name-container">Jeanette Harmon <br>
                     <span>Verified Graduate</span></h1>
                 </section>
 
 
                 <section class="jeanette-rev-container">
-                    <h1>An overall wonderful and rewarding</h1>
-                    <p>"Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love."</p>
+                    <h1 class="jeanette-rev">An overall wonderful and rewarding experience</h1>
+                    <p class="jeanette-rev2">"Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love."</p>
                 </section>
 
             </section>
@@ -83,15 +83,16 @@
 
                 <section class="patrick-name">
                     <span><img src="https://res.cloudinary.com/dwdz4mn27/image/upload/v1626999745/images2/image-patrick_xlth5y.jpg" alt=""></span>
-                    <h1>Patrick Abrams <br>
-                    <span>Verified Graduate</span></h1>
+                    <h1 class="patrick-name-container">Patrick Abrams <br>
+                    <span>Verified Graduate</span>
+                    </h1>
 
                 </section>
 
                 <section class="patrick-rev-container">
 
-                    <h1>Awesome teaching support from TS's who did the bootcamp themselves. Getting guidance fomr them and learning from their experiences was easy.</h1>
-                    <p>"The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will ger the personal attention you need from an incredible community of smart and amazing people."</p>
+                    <h1 class="patrick-rev">Awesome teaching support from TS's who did the bootcamp themselves. Getting guidance fomr them and learning from their experiences was easy.</h1>
+                    <p class="patrick-rev2">"The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will ger the personal attention you need from an incredible community of smart and amazing people."</p>
                 </section>
 
             </section>
