--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </section>
 
                 <section class="kira-rev-container">
-                    <h1 class="kira-rev">Such a life-changing experience. Highly recimmended!</h1>
+                    <h1 class="kira-rev">Such a life-changing experience. Highly recommended!</h1>
                     <p class="kira-rev2">"Before joining the bootcamp, I've never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a  former student of theirs who can only say wounderful things about the program. The entire curriculum and staff did not disappoint. They were hands-on and I never had to wait long for assisance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I've oftenn referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer afeter receiving multiple offers. 100% recommend!"</p>
                 </section>
 
@@ -91,7 +91,8 @@
 
                 <section class="patrick-rev-container">
 
-                    <h1 class="patrick-rev">Awesome teaching support from TS's who did the bootcamp themselves. Getting guidance fomr them and learning from their experiences was easy.</h1>
+                    <h1 class="patrick-rev">Awesome teaching support from TS's who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h1>
+
                     <p class="patrick-rev2">"The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will ger the personal attention you need from an incredible community of smart and amazing people."</p>
                 </section>
 
